--- a/letstalk/pubspec.yaml
+++ b/letstalk/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   image_picker: ^0.8.5+3
+  firebase_core: ^1.21.1
+  firebase_storage: ^10.3.7
+  firebase_database: ^9.1.3
+  crypto: ^3.0.2
+  cloud_firestore: ^3.4.6
 
 dev_dependencies:
   flutter_test:
